--- a/paper/tex/introduction.tex
+++ b/paper/tex/introduction.tex
@@ -16,12 +16,16 @@ One of the main challenges in parallelizing level-set algorithms on adaptive gri
 \item \textbf{Parallel octrees: p4est, dendro, octor, etc. How do we plan to use p4est?}
 The idea of using SFCs for parallel partitioning of Quad-/Octrees is not new in itself and has been tried by many researchers. For instance, Octor \fcite{octor} uses a Morton curve (also known as Z-curve) for traversing the leaves of an Octree which is then used to index and distribute them between processors and has been shown to scale up to 6200 cores \fcite{mantle convection octor}. Dendro \fcite{original dendro paper} is another example of parallel octree code in which similar ideas are used for parallel partitioning and development of a parallel geometric multigrid that has been scaled up to about 32000 cores \fcite{dendro parallel multigrid}. More recently, authors in \fcite{p4est} extended these ideas to a collection, or a ``forest'', of octrees that are connected through a common, potentially unstructured, hexahedral grid. They then use a global Morton curve to partition the entire forest in parallel. Implementation of these algorithms, which were shown to scale to more than 200,000 processors, are publicly available through simple API provided by the \texttt{p4est} library \fcite{p4est website?}. In fact the algorithms presented in this paper are directly implemented on top of \texttt{p4est} library and we do not discuss any algorithm that is already covered in \texttt{p4est paper}. Instead we focus on parallelization of level-set method on Quad-/Octrees and make appropriate references to \fcite{p4st paper} whenever necessary.
 
-\item \textbf{Parallel semi-lagrangian methods? What are the challenges? Whats out there?}
+\item \textbf{Parallel advection methods? What are the challenges?}
 Parallel level-set algorithms can be categorized in three separate groups: 1) Parallel advection algorithms, 2) Parallel reinitialization algorithms, and 3) Parallel motion under curvature algorithms. In this article we focus on developing algorithms for the first two categories. We also make use of the popular \texttt{PETSc} \fcite{petsc} library for solution of the linear systems that arise from the third category. Moreover, \texttt{PETSc} provides primitives, such as parallel ghosted vector and scatter/gather operations, which simplifies the implementation. 
 
 Eulerian advection schemes can easily be parallelized but unfortunately are limited by the CFL condition. For adaptive grids, this could be very restrictive as the tree could be locally refined very deeply to capture quantities of interest. Semi-Lagrangian methods combine the unconditional stability of Lagrangian methods and the ease of use of Eulerian grids and have been successfully used for advecting the level-set function on Quad-/Octree grids before \fcite{Frederic's paper}. However, parallelizing the Semi-Lagrangian algorithm in a domain decomposition context is not an easy task. The reason for this is twofold: First, depending on the CFL number, the departure points may end up outside the ghost region and in remote processors that are potentially far away. This requires a very dynamic and nonuniform communication pattern which is complicated to implement. For adaptive grids situation is even more complicated due to the asymmetric nature of communication, i.e. every processor knows the message destination but no processor knows which processor to expect message from and how many. Second, depending on the CFL number, the distribution of departure points could be entirely independent of the original parallel partitioning. As a result large CFL numbers could result in very load-unbalanced distribution of departure points which restricts the scalability of the algorithm. Both of these problems, of course, could be avoided by choosing $\text{CFL} \le 1$ but that would defeat the purpose of using Semi-Lagrangian algorithm in the first place. 
 
-\item \textbf{Parallel reinitialization methods? What are the challenges? Whats out there?}
+\item \textbf{Parallel reinitialization methods? What are the challenges?}
+In several applications of the level-set method, it is desirable for the level-set function to be a signed distance function, i.e. $|\nabla \phi| = 1$. There are generally two approaches to enforce this property: 1) Solving the pseudo-time transient reinitialization equation $\phi_\tau + S(\phi_0)\left(|\nabla \phi| - 1\right) = 0$ (c.f. section \ref{section::levelset method}) \fcite{osher's book, smerka's paper?} or 2) Solving the static Eikonal equation $F(x)|\nabla\phi| = 1$ with constant speed function $F(x) \equiv 1$. The transient reinitialization equation can be solved using explicit finite differences and thus can easily be parallelized with a domain decomposition approach. Moreover, only a few iterations may be needed if the signed-distance property is only required close to the interface \fcite{Frederic's levelset paper}. This is the approach we have chosen in this paper. If, however, the signed-distance property is required in the entire domain solving the static Eikonal equation is more computationally efficient. Unfortunately, however, the most popular algorithm for solving the Eikonal equation, i.e. the Fast Marching Method \fcite{sethian's book, original FMM paper}, is inherently sequential due to causal relationship between grid points and cannot be easily parallelized. The Fast Sweeping Method (FSM) \fcite{Zhao's paper} is an alternative method for solving the static Eikonal equation iteratively which can be more computationally efficient for simple choices of speed function, e.g. as in this context, and for simple interfaces. Moreover, FSM has more potential for parallelization compared to the FMM.
+
+\item \textbf{literature review on parallel levelset}
+Large body of research has been devoted to parallelization of the level-set methods and here we review some of the more relevant works.
 
 \item \textbf{Whats the organization of the paper}
 \end{enumerate}
