Introduction almost finished -- needs cleaning.

--- a/paper/tex/draft.tex
+++ b/paper/tex/draft.tex
@@ -67,11 +67,11 @@
 
 \input{abstract}
 \input{introduction}
-\input{levelset_method}
-\input{parallel_algorithms}
-\input{scaling_results}
-\input{applications}
-\input{conclusion}
+% \input{levelset_method}
+% \input{parallel_algorithms}
+% \input{scaling_results}
+% \input{applications}
+% \input{conclusion}
 
 \bibliographystyle{plain}
 \addcontentsline{toc}{section}{\refname}
