--- a/paper/tex/refs.bib
+++ b/paper/tex/refs.bib
@@ -2,17 +2,215 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Mohammad Mirzadeh at 2014-09-02 17:52:57 -0700 
+%% Created for Mohammad Mirzadeh at 2014-09-03 17:35:14 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@article{Tsitsiklis:95:Efficient-algorithms,
+	Author = {Tsitsiklis, John N},
+	Date-Added = {2014-09-04 00:02:00 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Journal = {Automatic Control, IEEE Transactions on},
+	Number = {9},
+	Pages = {1528--1538},
+	Publisher = {IEEE},
+	Title = {Efficient algorithms for globally optimal trajectories},
+	Volume = {40},
+	Year = {1995}}
+
+@techreport{Herrmann:03:A-domain-decompositi,
+	Author = {Herrmann, M},
+	Date-Added = {2014-09-03 23:59:22 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Institution = {DTIC Document},
+	Title = {A domain decomposition parallelization of the fast marching method},
+	Year = {2003}}
+
+@article{Cates;Lefohn;Whitaker:04:GIST:-an-interactive,
+	Author = {Cates, Joshua E and Lefohn, Aaron E and Whitaker, Ross T},
+	Date-Added = {2014-09-03 22:27:52 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Journal = {Medical image analysis},
+	Number = {3},
+	Pages = {217--231},
+	Publisher = {Elsevier},
+	Title = {GIST: an interactive, GPU-based level set segmentation tool for 3D medical images},
+	Volume = {8},
+	Year = {2004}}
+
+@inproceedings{Roberts;Packer;Sousa;etal:10:A-work-efficient-GPU,
+	Author = {Roberts, Mike and Packer, Jeff and Sousa, Mario Costa and Mitchell, Joseph Ross},
+	Booktitle = {Proceedings of the Conference on High Performance Graphics},
+	Date-Added = {2014-09-03 22:27:46 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Organization = {Eurographics Association},
+	Pages = {123--132},
+	Title = {A work-efficient GPU algorithm for level set segmentation},
+	Year = {2010}}
+
+@incollection{Lefohn;Cates;Whitaker:03:Interactive-GPU-base,
+	Author = {Lefohn, Aaron E and Cates, Joshua E and Whitaker, Ross T},
+	Booktitle = {Medical Image Computing and Computer-Assisted Intervention-MICCAI 2003},
+	Date-Added = {2014-09-03 22:21:42 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Pages = {564--572},
+	Publisher = {Springer},
+	Title = {Interactive, GPU-based level sets for 3D segmentation},
+	Year = {2003}}
+
+@incollection{Fortmeier;Bucker:11:A-parallel-strategy-,
+	Author = {Fortmeier, Oliver and B{\"u}cker, H Martin},
+	Booktitle = {High Performance Computing for Computational Science--VECPAR 2010},
+	Date-Added = {2014-09-03 22:00:43 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Pages = {200--209},
+	Publisher = {Springer},
+	Title = {A parallel strategy for a level set simulation of droplets moving in a liquid medium},
+	Year = {2011}}
+
+@article{Behrens:96:An-adaptive-semi-Lag,
+	Annote = {this is a test},
+	Author = {Behrens, J{\"o}rn},
+	Date-Added = {2014-09-03 18:21:23 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Journal = {Monthly weather review},
+	Number = {10},
+	Pages = {2386--2395},
+	Title = {An adaptive semi-{L}agrangian advection scheme and its parallelization},
+	Volume = {124},
+	Year = {1996}}
+
+@article{Drake;Foster;Michalakes;etal:95:Design-and-performan,
+	Author = {Drake, John and Foster, Ian and Michalakes, John and Toonen, Brian and Worley, Patrick},
+	Date-Added = {2014-09-03 18:15:49 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Journal = {Parallel Computing},
+	Number = {10},
+	Pages = {1571--1591},
+	Publisher = {Elsevier},
+	Title = {Design and performance of a scalable parallel community climate model},
+	Volume = {21},
+	Year = {1995}}
+
+@article{Yang;Yang;Cai:14:Parallel-Domain-Deco,
+	Author = {Yang, Haijian and Yang, Chao and Cai, Xiao-Chuan},
+	Date-Added = {2014-09-03 18:15:26 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Journal = {Journal of Scientific Computing},
+	Pages = {1--23},
+	Publisher = {Springer},
+	Title = {Parallel Domain Decomposition Methods with Mixed Order Discretization for Fully Implicit Solution of Tracer Transport Problems on the Cubed-Sphere},
+	Year = {2014}}
+
+@article{White-III;Dongarra:11:High-performance-hig,
+	Author = {White III, JB and Dongarra, Jack J},
+	Date-Added = {2014-09-03 18:14:21 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Journal = {Journal of Computational Physics},
+	Number = {17},
+	Pages = {6778--6799},
+	Publisher = {Elsevier},
+	Title = {High-performance high-resolution semi-{L}agrangian tracer transport on a sphere},
+	Volume = {230},
+	Year = {2011}}
+
+@article{Thomas;Cote:95:Massively-parallel-s,
+	Author = {Thomas, S and C{\^o}t{\'e}, J},
+	Date-Added = {2014-09-03 18:13:26 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Journal = {Simulation Practice and Theory},
+	Number = {4},
+	Pages = {223--238},
+	Publisher = {Elsevier},
+	Title = {Massively parallel semi-{L}agrangian advection},
+	Volume = {3},
+	Year = {1995}}
+
+@article{Malevsky;Thomas:97:Parallel-algorithms-,
+	Author = {Malevsky, AV and Thomas, SJ},
+	Date-Added = {2014-09-03 18:13:10 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Journal = {International Journal for Numerical Methods in Fluids},
+	Number = {4},
+	Pages = {455--473},
+	Publisher = {Citeseer},
+	Title = {Parallel algorithms for semi-{L}agrangian advection},
+	Volume = {25},
+	Year = {1997}}
+
+@article{Chacon;Vladimirsky:12:Fast-two-scale-metho,
+	Author = {Chacon, Adam and Vladimirsky, Alexander},
+	Date-Added = {2014-09-03 18:12:39 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Journal = {SIAM Journal on Scientific Computing},
+	Number = {2},
+	Pages = {A547--A578},
+	Publisher = {SIAM},
+	Title = {Fast two-scale methods for eikonal equations},
+	Volume = {34},
+	Year = {2012}}
+
+@article{Chacon;Vladimirsky:13:A-parallel-Heap-Cell,
+	Author = {Chacon, Adam and Vladimirsky, Alexander},
+	Date-Added = {2014-09-03 18:12:36 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Journal = {arXiv preprint arXiv:1306.4743},
+	Title = {A parallel Heap-Cell Method for Eikonal equations},
+	Year = {2013}}
+
+@article{Jeong;Whitaker:08:A-fast-iterative-met,
+	Author = {Jeong, Won-Ki and Whitaker, Ross T},
+	Date-Added = {2014-09-03 18:11:09 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Journal = {SIAM Journal on Scientific Computing},
+	Number = {5},
+	Pages = {2512--2534},
+	Publisher = {SIAM},
+	Title = {A fast iterative method for eikonal equations},
+	Volume = {30},
+	Year = {2008}}
+
+@article{Zhao:05:A-fast-sweeping-meth,
+	Author = {Zhao, Hongkai},
+	Date-Added = {2014-09-03 18:11:08 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Journal = {Mathematics of computation},
+	Number = {250},
+	Pages = {603--627},
+	Title = {A fast sweeping method for eikonal equations},
+	Volume = {74},
+	Year = {2005}}
+
+@article{Detrixhe;Gibou;Min:13:A-parallel-fast-swee,
+	Author = {Detrixhe, Miles and Gibou, Fr{\'e}d{\'e}ric and Min, Chohong},
+	Date-Added = {2014-09-03 18:10:36 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Journal = {Journal of Computational Physics},
+	Pages = {46--55},
+	Publisher = {Elsevier},
+	Title = {A parallel fast sweeping method for the eikonal equation},
+	Volume = {237},
+	Year = {2013}}
+
+@article{Zhao:07:Parallel-implementat,
+	Author = {Zhao, Hongkai},
+	Date-Added = {2014-09-03 18:10:19 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
+	Journal = {JOURNAL OF COMPUTATIONAL MATHEMATICS-INTERNATIONAL EDITION-},
+	Number = {4},
+	Pages = {421},
+	Publisher = {SCIENCE PRESS},
+	Title = {Parallel implementations of the fast sweeping method},
+	Volume = {25},
+	Year = {2007}}
+
 @article{Breus;Cristiani;Gwosdek;etal:11:An-adaptive-domain-d,
 	Author = {Breu{\ss}, Michael and Cristiani, Emiliano and Gwosdek, Pascal and Vogel, Oliver},
 	Date-Added = {2014-09-03 00:38:21 +0000},
-	Date-Modified = {2014-09-03 00:51:14 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
 	Journal = {Applied Mathematics and Computation},
 	Number = {1},
 	Pages = {32--44},
@@ -25,7 +223,7 @@
 	Author = {Fortmeier, Oliver and Bucker, H Martin},
 	Booktitle = {High Performance Computing and Communications (HPCC), 2010 12th IEEE International Conference on},
 	Date-Added = {2014-09-03 00:37:16 +0000},
-	Date-Modified = {2014-09-03 00:51:14 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
 	Organization = {IEEE},
 	Pages = {114--121},
 	Title = {Hybrid distributed-/shared-memory parallelization for re-initializing level set functions},
@@ -34,7 +232,7 @@
 @article{Fortmeier;Martin-Bucker:11:Parallel-re-initiali,
 	Author = {Fortmeier, Oliver and Martin B{\"u}cker, H},
 	Date-Added = {2014-09-03 00:36:49 +0000},
-	Date-Modified = {2014-09-03 00:51:14 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
 	Journal = {Journal of Computational Physics},
 	Number = {12},
 	Pages = {4437--4453},
@@ -46,7 +244,7 @@
 @phdthesis{Tugurlan:08:Fast-marching-method,
 	Author = {Tugurlan, Maria Cristina},
 	Date-Added = {2014-09-03 00:36:33 +0000},
-	Date-Modified = {2014-09-03 00:51:14 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
 	School = {Louisiana State University},
 	Title = {Fast marching methods-parallel implementation and analysis},
 	Year = {2008}}
@@ -54,7 +252,7 @@
 @article{Han;Hu;Adams:14:Adaptive-multi-resol,
 	Author = {Han, LH and Hu, XY and Adams, NA},
 	Date-Added = {2014-09-03 00:35:56 +0000},
-	Date-Modified = {2014-09-03 00:51:14 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
 	Journal = {Journal of Computational Physics},
 	Pages = {131--152},
 	Publisher = {Elsevier},
@@ -65,7 +263,7 @@
 @article{Appleyard;Drikakis:11:Higher-order-CFD-and,
 	Author = {Appleyard, J and Drikakis, D},
 	Date-Added = {2014-09-03 00:35:23 +0000},
-	Date-Modified = {2014-09-03 00:51:14 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
 	Journal = {Computers \& Fluids},
 	Number = {1},
 	Pages = {101--105},
@@ -78,7 +276,7 @@
 	Author = {Hagan, Aaron and Zhao, Ye},
 	Booktitle = {Advances in Visual Computing},
 	Date-Added = {2014-09-03 00:35:08 +0000},
-	Date-Modified = {2014-09-03 00:51:14 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
 	Pages = {960--969},
 	Publisher = {Springer},
 	Title = {Parallel 3D image segmentation of large data sets on a GPU cluster},
@@ -87,19 +285,19 @@
 @article{Herrmann:10:A-parallel-Eulerian-,
 	Author = {Herrmann, Marcus},
 	Date-Added = {2014-09-03 00:34:20 +0000},
-	Date-Modified = {2014-09-03 00:51:14 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
 	Journal = {Journal of Computational Physics},
 	Number = {3},
 	Pages = {745--759},
 	Publisher = {Elsevier},
-	Title = {A parallel Eulerian interface tracking/Lagrangian point particle multi-scale coupling procedure},
+	Title = {A parallel {E}ulerian interface tracking/{L}agrangian point particle multi-scale coupling procedure},
 	Volume = {229},
 	Year = {2010}}
 
 @article{Sussman:05:A-parallelized-adapt,
 	Author = {Sussman, Mark},
 	Date-Added = {2014-09-03 00:34:01 +0000},
-	Date-Modified = {2014-09-03 00:51:14 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
 	Journal = {Computers \& structures},
 	Number = {6},
 	Pages = {435--444},
@@ -111,7 +309,7 @@
 @article{Hajihashemi;El-Shenawee:10:High-performance-com,
 	Author = {Hajihashemi, Mohammad R and El-Shenawee, Magda},
 	Date-Added = {2014-09-03 00:33:46 +0000},
-	Date-Modified = {2014-09-03 00:51:14 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
 	Journal = {Journal of Parallel and Distributed Computing},
 	Number = {6},
 	Pages = {671--679},
@@ -123,7 +321,7 @@
 @article{Wang;Chang;Kale;etal:06:Parallelization-of-a,
 	Author = {Wang, Kai and Chang, Anthony and Kale, Laxmikant V and Dantzig, Jonathan A},
 	Date-Added = {2014-09-03 00:30:35 +0000},
-	Date-Modified = {2014-09-03 00:51:14 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
 	Journal = {Journal of Parallel and Distributed Computing},
 	Number = {11},
 	Pages = {1379--1386},
@@ -135,7 +333,7 @@
 @article{Rodriguez;Sahni;Lahey-Jr;etal:13:A-parallel-adaptive-,
 	Author = {Rodriguez, Joseph M and Sahni, Onkar and Lahey Jr, Richard T and Jansen, Kenneth E},
 	Date-Added = {2014-09-03 00:30:21 +0000},
-	Date-Modified = {2014-09-03 00:51:14 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
 	Journal = {Computers \& Fluids},
 	Pages = {115--131},
 	Publisher = {Elsevier},
@@ -146,7 +344,7 @@
 @article{Bangerth;Burstedde;Heister;etal:11:Algorithms-and-data-,
 	Author = {Bangerth, Wolfgang and Burstedde, Carsten and Heister, Timo and Kronbichler, Martin},
 	Date-Added = {2014-09-03 00:29:17 +0000},
-	Date-Modified = {2014-09-03 00:51:14 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
 	Journal = {ACM Transactions on Mathematical Software (TOMS)},
 	Number = {2},
 	Pages = {14},
@@ -159,7 +357,7 @@
 	Author = {Langer, Akhil and Lifflander, Jonathan and Miller, Phil and Pan, Kuo-Chuan and Kale, Laxmikant V and Ricker, Paul},
 	Booktitle = {Computer Architecture and High Performance Computing (SBAC-PAD), 2012 IEEE 24th International Symposium on},
 	Date-Added = {2014-09-03 00:28:46 +0000},
-	Date-Modified = {2014-09-03 00:51:14 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
 	Organization = {IEEE},
 	Pages = {100--107},
 	Title = {Scalable Algorithms for Distributed-Memory Adaptive Mesh Refinement},
@@ -169,7 +367,7 @@
 	Author = {Burstedde, Carsten and Ghattas, Omar and Gurnis, Michael and Stadler, Georg and Tan, Eh and Tu, Tiankai and Wilcox, Lucas C and Zhong, Shijie},
 	Booktitle = {Proceedings of the 2008 ACM/IEEE conference on Supercomputing},
 	Date-Added = {2014-09-03 00:28:29 +0000},
-	Date-Modified = {2014-09-03 00:51:14 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
 	Organization = {IEEE Press},
 	Pages = {62},
 	Title = {Scalable adaptive mantle convection simulation on petascale supercomputers},
@@ -179,7 +377,7 @@
 	Author = {Tu, Tiankai and O'Hallaron, David R and Ghattas, Omar},
 	Booktitle = {Supercomputing, 2005. Proceedings of the ACM/IEEE SC 2005 Conference},
 	Date-Added = {2014-09-03 00:28:11 +0000},
-	Date-Modified = {2014-09-03 00:51:14 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
 	Organization = {IEEE},
 	Pages = {4--4},
 	Title = {Scalable parallel octree meshing for terascale applications},
@@ -188,7 +386,7 @@
 @article{Burstedde;Wilcox;Ghattas:11:p4est:-Scalable-algo,
 	Author = {Burstedde, Carsten and Wilcox, Lucas C and Ghattas, Omar},
 	Date-Added = {2014-09-03 00:26:34 +0000},
-	Date-Modified = {2014-09-03 00:51:14 +0000},
+	Date-Modified = {2014-09-04 00:35:14 +0000},
 	Journal = {SIAM Journal on Scientific Computing},
 	Number = {3},
 	Pages = {1103--1133},
