Finished with the algorithm section of paper

--- a/paper/tex/draft.tex
+++ b/paper/tex/draft.tex
@@ -10,10 +10,10 @@
 \usepackage{graphicx}
 \usepackage{latexsym}
 \usepackage{pdfsync}
-\usepackage[boxed]{algorithm}
+% \usepackage[boxed]{algorithm}
 \usepackage{algpseudocode}
 \usepackage{algorithm}
-%\usepackage{algorithmic}
+% \usepackage{algorithmic}
 \usepackage{multirow}
 \usepackage{rotating}
 \usepackage{color}
@@ -67,8 +67,8 @@
 
 \input{abstract}
 \input{introduction}
-% \input{levelset_method}
-% \input{parallel_algorithms}
+\input{levelset_method}
+\input{parallel_algorithms}
 % \input{scaling_results}
 % \input{applications}
 % \input{conclusion}
