--- a/paper/tex/parallel_algorithms.tex
+++ b/paper/tex/parallel_algorithms.tex
@@ -210,7 +210,7 @@ where $D^+_i \phi$ and $D^-_i \phi$ are the forward and backward derivatives in 
 \right.
 ,
 \een
-where $a^+ = \max(a, 0)$ and $a^- = \min(a, 0)$. Similar to \cite{Min;Gibou:07:A-second-order-accur}, equation \eqref{eq:semidiscrete_reinit} is integrated in time using the TVD-RK2 scheme using adaptive time-stepping to accelerate convergence to steady state. Since all computation is grid based, parallel implementation of this scheme is mostly trivial. However, one minor point requires further explanation. As suggested in \cite{Min;Gibou:07:A-second-order-accur}, one-sided derivatives $D^+_i \phi$ and $D^-_i \phi$ are computed using second order discretizations which require computation of second derivatives. To enable overlap between computation and communications when computing second derivatives and also integrating \eqref{eq:semidiscrete_reinit}, we use the following common technique. First, we label all local points, $L_p$, as either private, $P_p$, or boundary, $B_p$. Here, boundary points are the collection of all local points that are regarded as ghost point, $G_p$, on all other processors, i.e. $B_p = \underset{r,\;r\neq p}{\bigcup} G_r$. Private points are fined as the collection of all local points that are not a boundary point, i.e. $L_p = P_p\cup B_p$. Algorithm \ref{alg:overlap} illustrates how this labeling can help with computation/computation overlap of an arbitrary local operation $\phi^{n+1} \gets \mathcal{F}(\phi^n)$. Note that \texttt{p4est} library already includes all the primitives required for labeling local points without any further communication.
+where $a^+ = \max(a, 0)$ and $a^- = \min(a, 0)$. Similar to \cite{Min;Gibou:07:A-second-order-accur}, equation \eqref{eq:semidiscrete_reinit} is integrated in time using the TVD-RK2 scheme using adaptive time-stepping to accelerate convergence to steady state. Since all computation is grid based, parallel implementation of this scheme is mostly trivial. However, one minor point requires further explanation. As suggested in \cite{Min;Gibou:07:A-second-order-accur}, one-sided derivatives $D^+_i \phi$ and $D^-_i \phi$ are computed using second order discretizations which require computation of second derivatives. To enable overlap between computation and communications when computing second derivatives and also integrating \eqref{eq:semidiscrete_reinit}, we use the following common technique. First, we label all local points, $L_p$, as either private, $P_p$, or boundary, $B_p$. Here, boundary points are the collection of all local points that are regarded as ghost point, $G_r$, on all other processors, i.e. $B_p = \underset{r,\;r\neq p}{\bigcup} G_r$. Private points are fined as the collection of all local points that are not a boundary point, i.e. $P_p = L_p \setminus B_p$. Algorithm \ref{alg:overlap} illustrates how this labeling can help with computation/computation overlap of an arbitrary local operation $\phi^{n+1} \gets \mathcal{F}(\phi^n)$. Note that \texttt{p4est} library already includes all the primitives required for labeling local points without any further communication.
 
 \begin{algorithm}[htbp]
 \caption{$\phi^{n+1} \gets \texttt{Overlap (}\phi^n, \mathcal{F}\texttt{)}$}\label{euclid}
