added interpolation results

--- a/paper/tex/draft.tex
+++ b/paper/tex/draft.tex
@@ -69,7 +69,7 @@
 \input{introduction}
 \input{levelset_method}
 \input{parallel_algorithms}
-% \input{scaling_results}
+\input{scaling_results}
 % \input{applications}
 % \input{conclusion}
 
